# entroly

./: .entroly_verification.json  .gitattributes  .github-ignore  .gitignore  .mcp.json  AGENTS.md  BENCHMARKS.md  BIPT.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.entroly  LICENSE  NOTICE  README.md  RESEARCH.md  SECURITY.md  all_files_list.txt  animated_terminal.html  arch_summary.txt  benchmark_debug.py  build_errors.txt  build_output.txt  demo.tape  demo_full_experience.py  demo_presentation.html  docker-compose.yml  entroly-report.html  extractor.py  extractor_cogops.py  index.html  pyproject.toml  ruff_errors.txt  ruff_errors2.txt  run_real_mcp_test.py  run_real_proxy_test.py  super_dump.txt  super_extractor.py  training_data.jsonl  translate_readme.py
.claude/: settings.json  settings.local.json
.claude-plugin/: manifest.json
.devcontainer/: devcontainer.json
.entroly/: change_listener_state.json
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.test_ravs_log/: events.jsonl
algorithms/: README.md  bipt.md  causal-cg.md  cognitive-bus.md  nkbe.md  resonance.md  system-1-system-2.md
bench/: accuracy.py  autotune.py  colab_run.ipynb  compare.py  evaluate.py  fix_nb.py  fix_nb2.py  fix_nb3.py  fix_nb4.py  fix_nb5.py  fix_nb6.py  looGLE_compare.py  needle_heatmap.py  quality_eval.py  quality_eval_results.json  repobench_retrieval.py  results.tsv  swebench_retrieval.py  test_all_cli.sh  trust_bench.py
benchmarks/: calibrate_witness_halueval.py  run_witness_benchmarks.py  run_witness_python_path.py  write_witness_v3_report.py
cookbook/: README.md
demo/: README.md  bench.tape  dashboard.tape
docs/: DETAILS.md  build-guide.md  context-engineering.html  dashboard.css  dashboard.html  dashboard.js  fork-upstream-audit.md  generate_demo.py  index.html  mcp-server-guide.html  repo_file_map.md  robots.txt  sitemap.xml  token-optimization.html
entroly/: README.md  __init__.py  __main__.py  _docker_launcher.py  _rust_launcher.py  adaptive_budget.py  adaptive_pruner.py  archetype_optimizer.py  auto_index.py  autotune.py  belief_compiler.py  benchmark_harness.py  cache_aligner.py  causal_attribution.py  ccr.py  change_listener.py  checkpoint.py  cli.py  codex_integration.py  config.py  context_bridge.py  context_scaffold.py  controls_html.py  coupling.py  csharp_semantic.py  daemon.py  dashboard.py  evolution_daemon.py  fast_path.py  federation.py  flow_orchestrator.py  hardening.py  integrate_entroly_mcp.py  launching.py  long_term_memory.py  multimodal.py  online_learner.py  prefetch.py  provenance.py  proxy.py  (+22 more)
entroly-core/: Cargo.toml  LICENSE  README.md  clippy_errors.txt  pyproject.toml
entroly-core/src/: anomaly.rs  archetype.rs  bm25.rs  cache.rs  causal.rs  channel.rs  cognitive_bus.rs  cogops.rs  conversation_pruner.rs  dedup.rs  depgraph.rs  entropy.rs  fragment.rs  guardrails.rs  health.rs  hierarchical.rs  knapsack.rs  knapsack_sds.rs  lib.rs  lsh.rs  nkbe.rs  prism.rs  query.rs  query_persona.rs  resonance.rs  sast.rs  semantic_dedup.rs  skeleton.rs  witness.rs
entroly-core/tests/: test_brutal.py  test_integration.py
entroly-wasm/: Cargo.toml  build_output.txt  index.js  package.json  test_distill.js  test_federation_js.js  test_smoke.js  test_wasm_e2e.js
entroly-wasm/.entroly/vault/beliefs/: auto_index.js_absolute_max_bytes.md  auto_index.js_autoindex.md  auto_index.js_autoindex_startincrementalwatcher_estimatetokens.md  auto_index.js_binary_extensions.md  auto_index.js_estimatetokens.md  auto_index.js_fs.md  auto_index.js_gitlsfiles.md  auto_index.js_ignorepatterns.md  auto_index.js_loadentrolyignore.md  auto_index.js_matchesignore.md  auto_index.js_max_file_bytes.md  auto_index.js_max_files.md  auto_index.js_path.md  auto_index.js_shouldindex.md  auto_index.js_skip_patterns.md  auto_index.js_startincrementalwatcher.md  auto_index.js_supported_extensions.md  auto_index.js_walkfallback.md  autotune.js_classifyquery.md  autotune.js_computeexplorationbonus.md  autotune.js_decay_gamma.md  autotune.js_defaults.md  autotune.js_exploration_c.md  autotune.js_extractweights.md  autotune.js_feedbackjournal.md  autotune.js_feedbackjournal_optimize_computeexplorationbonus_optimizefromjournal.md  autotune.js_findconfigpath.md  autotune.js_fs.md  autotune.js_hotreloadweights.md  autotune.js_journal_max_age_ms.md  autotune.js_loadconfig.md  autotune.js_max_blend_rate.md  autotune.js_max_weight.md  autotune.js_min_weight.md  autotune.js_normalizeweights.md  autotune.js_optimize.md  autotune.js_optimizefromjournal.md  autotune.js_path.md  autotune.js_runautotune.md  autotune.js_saveconfig.md  (+79 more)
entroly-wasm/.entroly/vault/evolution/: registry.md
entroly-wasm/.entroly/vault/verification/: 20260412T022446_full_verification_pass.md  20260412T073316_full_verification_pass.md  20260412T074639_full_verification_pass.md
entroly-wasm/js/: agentskills_export.js  autotune.js  cli.js  cogops.js  config.js  distill.js  evolution_daemon.js  federation.js  gateways.js  multimodal.js  repo_map.js  server.js  skills.js  value_tracker.js  vault.js  vault_observer.js  workspace.js
entroly-wasm/src/: anomaly.rs  cache.rs  causal.rs  channel.rs  cognitive_bus.rs  conversation_pruner.rs  dedup.rs  depgraph.rs  entropy.rs  fragment.rs  guardrails.rs  health.rs  hierarchical.rs  knapsack.rs  knapsack_sds.rs  lib.rs  lsh.rs  nkbe.rs  prism.rs  query.rs  query_persona.rs  sast.rs  semantic_dedup.rs  utilization.rs
examples/: stream_claude_server.py
proofs/: README.md
research/: README.md
scripts/: bump_version.py  calc_savings.py  depmap.py  install.sh  smoke_cli.sh  super_extractor.py  vault_graph_cli.py  verify_readme.py  verify_witness_live_openai.py  verify_witness_release.py
tests/: _check_learning.py  _check_vault.py  _pilot.py  _proxy_e2e.py  _run_bench.py  _run_full.py  _test_ravs_prod.py  check_dashboard.py  claude_code_demo.html  generate_test_log.py  stream_claude_server.py  test_acb_verify.py  test_archetype.py  test_archetype_router.py  test_auth.py  test_bench_accuracy.py  test_benchmark_harness.py  test_bipt.py  test_change_listener.py  (+64 more)
(+522 files in other folders)
