[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "entroly"
version = "0.3.0"

description = "Information-theoretic context optimization for AI coding agents. Knapsack-optimal token budgeting, Shannon entropy scoring, SimHash dedup, predictive pre-fetch. MCP server."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Ebbiforge", email = "fastrunner10090@gmail.com" },
]
keywords = [
    "mcp", "context-optimization", "token-cost", "agentic-ai",
    "knapsack", "entropy", "deduplication", "checkpoint",
    "cursor", "claude", "copilot", "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Docker is the only hard requirement — the Rust engine lives inside the image.
    # For native/fallback mode (ENTROLY_NO_DOCKER=1), also install entroly-core.
]

[project.optional-dependencies]
native = [
    "entroly-core>=0.2.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/juyterman1000/entroly"
Documentation = "https://github.com/juyterman1000/entroly#readme"
Repository = "https://github.com/juyterman1000/entroly"
"Bug Tracker" = "https://github.com/juyterman1000/entroly/issues"
"Full Framework" = "https://github.com/juyterman1000/ebbiforge"

[project.scripts]
entroly = "entroly.cli:main"
entroly-docker = "entroly._docker_launcher:launch"

[tool.hatch.build.targets.wheel]
packages = ["entroly"]
