[package]
name = "entroly-core"
version = "0.11.0"
edition = "2021"
description = "Rust core for Entroly — information-theoretic context optimization"

[lib]
name = "entroly_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enabled by maturin (see pyproject.toml `[tool.maturin] features`) so wheel
# builds skip linking libpython — Python loads the .so at runtime. Left off
# for `cargo test` so the test binary links libpython normally.
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.23" }

# Serialization (checkpoint)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
md-5 = "0.11"

# Compression (checkpoint)
flate2 = "1.0"

# Concurrency
rayon = "1.8"
