[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "entroly-core"
version = "0.9.0"
description = "Rust core for Entroly — information-theoretic context optimization (knapsack, entropy, dedup, SAST, query analysis)"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "entroly", email = "fastrunner10090@gmail.com" },
]
keywords = ["mcp", "context-optimization", "knapsack", "entropy", "rust", "pyo3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/juyterman1000/entroly"
Repository = "https://github.com/juyterman1000/entroly"

[tool.maturin]
features = ["extension-module"]
